--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -9,23 +9,30 @@ layout: page
 <title>About</title>
 </head>
 <body>
-<h1>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations.</h1>
+<h1>About</h1>
+<br>
+<h3>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations.</h3>
+<br>
 <p>The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
 <br>
 </body>
 <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
+<br>
 <p>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</p>
 <br>
 </body>
 <img src="https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg" alt="Carsten's Abattoire">
+<br>
 <p>The technical drawings have been reformatted and restored for legibility.</p>
 <br>
 </body>
 <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apartment">
+<br>
 <p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
 <br>
 </body>
 <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
+<br>
 <p>Please visit the library's image archive here.</p>
 <br>
 </html>
