--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -6,38 +6,38 @@ layout: page
 <!DOCTYPE html>
 <html>
 <head>
-<title>About</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+</style>
 </head>
 <body>
-<h1>About</h1>
-<br>
-<h3>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations.</h3>
-<br>
-<p>The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.</p>
-<br>
-</body>
-<img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
-<p>
-<br>
-<p>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</p>
-<br>
-</body>
-<img src="https://aweymo.github.io/losttacoma/objects/coe_abattoire_17.jpeg" alt="Carsten's Abattoire">
-<p>
-<br>
-<p>The technical drawings have been reformatted and restored for legibility.</p>
-<br>
-</body>
-<img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apartment">
-<p>
-<br>
-<p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</p>
-<br>
-</body>
-<img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
-<p>
-<br>
-<p>Please visit the library's image archive here.</p>
-<br>
-</html>
 
+<h2>About</h2>
+
+<div class="row">
+  <div class="column" style="background-color:#FFFFFF;">
+    <h2>This work</h2>
+    <p>is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations</p>
+  </div>
+  <div class="column" style="background-color:#FFFFFF;">
+    <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
+  </div>
+</div>
