--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -15,8 +15,8 @@ layout: page
 .column {
   float: left;
   width: 25%;
-  padding: 100px;
-  height: 800px; 
+  padding: 50px;
+  height: 700px; 
 }
   
 .row:after {
@@ -36,8 +36,8 @@ layout: page
     <br>
     <br>
     <br>
-    <h2>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<h2> 
-    <h3>constituting 116 of the total 560 blueprints across 26 locations</h3>
+    <h4>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<h4> 
+    <p>constituting 116 of the total 560 blueprints across 26 locations<p>
     <br>
     <p>The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
   </div>
@@ -54,7 +54,7 @@ layout: page
     <br>
     <br>
     <br>
-    <h3>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.</h3>
+    <p>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.<p>
     <br>
     </p>Technical drawings have been reformatted and restored for legibility.</p>
   </div>
@@ -71,7 +71,7 @@ layout: page
     <br>
     <br>
     <br>
-    <h3>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.</h3>
+    <p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<p>
     <br>
     <p>Please visit the library's image archive here.</p>
   </div>
