--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -33,9 +33,6 @@ layout: page
  <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
     <h4>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<h4> 
     <p>constituting 116 of the total 560 blueprints across 26 locations<p>
     <br>
@@ -50,11 +47,7 @@ layout: page
   <div class="column" style="background-color:#FFFFFF;">
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <p>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.<p>
+    <h4>The scans of the blueprints were not performed by the Tacoma Public Library and some cropping and levels of the image files are not ideal.<h4>
     <br>
     </p>Technical drawings have been reformatted and restored for legibility.</p>
   </div>
@@ -67,11 +60,7 @@ layout: page
   <div class="column" style="background-color:#FFFFFF;">
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <p>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<p>
+    <h4>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<h4>
     <br>
     <p>Please visit the library's image archive here.</p>
   </div>
