--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -33,8 +33,7 @@ layout: page
  <br>
     <br>
     <br>
-    <h4>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<h4> 
-    <p>constituting 116 of the total 560 blueprints across 26 locations<p>
+    <h4>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations<h4> 
     <br>
     <p>The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
   </div>
