--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -35,12 +35,13 @@ layout: page
     <br>
     <br>
     <br>
-    <h4>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations<h4> 
+    <h4><strong>This work is a partial representation of the Tacoma Public Library Northwest Room's Lost Tacoma collection,<strong> constituting 116 of the total 560 blueprints across 26 locations<h4> 
     <br>
     <p>Technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished.<p>
   </div>
   <div class="column" style="background-color:#FFFFFF;">
     <img src="https://aweymo.github.io/losttacoma/objects/coe_buffelenapartments_01.jpeg" alt="Buffelen Apertments">
+    <sub> The Buffelen Apartments, original scan and reformatted copy <sub>
   </div>
 </div>
   
@@ -51,12 +52,13 @@ layout: page
     <br>
     <br>
     <br>
-    <h4>The scans of the blueprints were not performed by the Tacoma Public Library, and some cropping and levels of the image files are not ideal.<h4>
+    <h4><strong>The scans of the blueprints were not performed by the Tacoma Public Library,<strong> and some cropping and levels of the image files are not ideal.<h4>
     <br>
     </p>Images have been reformatted and restored for legibility.</p>
   </div>
   <div class="column" style="background-color:#FFFFFF;">
     <img src="https://aweymo.github.io/losttacoma/objects/coe_pacificrefridgeration_17s3.jpeg" alt="Pacific Refridgeration">
+    <sub> The Pacific Refridgeration Company, original scan and reformatted copy <sub>
   </div>
 </div>
   
@@ -69,10 +71,11 @@ layout: page
     <br>
     <h4>Restoration, arrangement and description was performed by Andrew Weymouth on the part of the Tacoma Public Library Northwest Room.<h4>
     <br>
-    <p>Please visit the library's image archive here.</p>
+    <p><strong>Please visit the library's image archive here<strong>.</p>
   </div>
   <div class="column" style="background-color:#FFFFFF;">
     <img src="https://aweymo.github.io/losttacoma/objects/coe_talmud_torah_12.jpeg" alt="Talmud Torah Synagogue">
+    <sub> The Talmud Torah Synagogue, original scan and reformatted copy <sub>
   </div>
 </div>
 
